--- a/proj-caams/client/package.json
+++ b/proj-caams/client/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "react-router-dom": "6",
+    "zod": "^3.19.1",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
