--- a/proj-caams/server/package.json
+++ b/proj-caams/server/package.json
@@ -8,7 +8,9 @@
         "start": "node .",
         "dev": "yarn prettier && nodemon .",
         "prettier": "prettier --write \"{src,tests}/**/*.js\" --config \".prettierrc\"",
-        "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
+        "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
+        "docker:up": "docker compose up --detach --no-recreate --wait",
+        "docker:down": "docker compose down --timeout 5"
     },
     "dependencies": {
         "cors": "^2.8.5",
