--- a/proj-caams/server/package.json
+++ b/proj-caams/server/package.json
@@ -13,6 +13,7 @@
         "docker:down": "docker compose down --timeout 5"
     },
     "dependencies": {
+        "@prisma/client": "^4.3.1",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "helmet": "^6.0.0",
@@ -23,6 +24,7 @@
         "jest": "^29.0.3",
         "nodemon": "^2.0.20",
         "prettier": "^2.7.1",
+        "prisma": "^4.3.1",
         "supertest": "^6.2.4"
     }
 }
