--- a/proj-caams/server/package.json
+++ b/proj-caams/server/package.json
@@ -7,10 +7,12 @@
     "scripts": {
         "start": "node .",
         "dev": "yarn prettier && nodemon .",
-        "prettier": "prettier --write \"{src,tests}/**/*.js\" --config \".prettierrc\"",
+        "prettier": "prettier --write \"{prisma,src,tests}/**/*.js\" --config \".prettierrc\"",
         "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
         "docker:up": "docker compose up --detach --no-recreate --wait",
-        "docker:down": "docker compose down --timeout 5"
+        "docker:down": "docker compose down --timeout 5",
+        "seed": "prisma db seed",
+        "studio": "prisma studio"
     },
     "dependencies": {
         "@prisma/client": "^4.3.1",
@@ -20,11 +22,15 @@
         "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "@faker-js/faker": "^7.5.0",
         "cross-env": "^7.0.3",
         "jest": "^29.0.3",
         "nodemon": "^2.0.20",
         "prettier": "^2.7.1",
         "prisma": "^4.3.1",
         "supertest": "^6.2.4"
+    },
+    "prisma": {
+        "seed": "node prisma/seed.js"
     }
 }
