--- a/proj-caams/server/package.json
+++ b/proj-caams/server/package.json
@@ -24,7 +24,8 @@
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "helmet": "^6.0.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "zod": "^3.19.1"
     },
     "devDependencies": {
         "@faker-js/faker": "^7.5.0",
